<resources>
    <string name="common_copyright_notice">Copyright \u00A9 2020–2026 Leon Latsch</string>
    <string name="common_slash">/</string>
    <string name="common_percent">%</string>
    <string name="common_pipe">|</string>
    <string name="common_loading">Loading …</string>
    <string name="common_password">Password</string>
    <string name="common_delete">Delete</string>
    <string name="common_export">Export</string>
    <string name="common_error">There was an error. Please try again.</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_are_you_sure">Are you sure?</string>
    <string name="common_bullet">•</string>
    <string name="common_more">More</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_create">Create</string>
    <string name="common_empty">Empty</string>
    <string name="common_rename">Rename</string>
    <string name="common_try_again">Try again</string>
    <string name="import_importing">Importing File(s)</string>
    <string name="import_permission_rationale">Photok needs to access your storage, to import files.</string>
    <string name="import_sharted_question">Do you want to import %1$d file(s)?</string>
    <string name="setup_create_your_password">Create your password</string>
    <string name="setup_enter_password">Enter your password</string>
    <string name="setup_confirm_password">Confirm your password</string>
    <string name="setup_password_strength_label">Password strength:</string>
    <string name="setup_button">Create</string>
    <string name="setup_password_strength_weak">Weak</string>
    <string name="setup_password_strength_moderate">Moderate</string>
    <string name="setup_password_strength_strong">Strong</string>
    <string name="setup_password_match_warning">\u26A0 Passwords do not match</string>
    <string name="setupSetup">Setup</string>
    <string name="unlock_title">Unlock your safe</string>
    <string name="unlock_enter_password">Enter password</string>
    <string name="unlock_button">Unlock</string>
    <string name="unlock_wrong_password">\u26A0 Wrong password</string>
    <string name="gallery_placeholder">There are no files in your safe</string>
    <string name="gallery_all_photos_label">All files</string>
    <string name="gallery_albums_label">Albums</string>
    <string name="gallery_albums_placeholder">Create your first album</string>
    <string name="gallery_albums_create_title">Create Album</string>
    <string name="gallery_albums_rename_title">Rename Album</string>
    <string name="gallery_albums_create_placeholder">Homework ;)</string>
    <string name="gallery_albums_select_title">Select an Album</string>
    <string name="gallery_albums_deleted">Album deleted</string>
    <string name="gallery_albums_photos_added">%1$d items added</string>
    <string name="magic_fab_new_album_label">New Album</string>
    <string name="import_menu_fab_label">Import</string>
    <string name="import_menu_new_files_title">Import new files</string>
    <string name="import_menu_new_files_description">Import photos and videos from your gallery.</string>
    <string name="import_menu_restore_title">Restore a backup</string>
    <string name="import_menu_restore_description">Restore a Photok backup. Files will be added to your current files.</string>
    <string name="import_menu_delete_warning">Imported files will be deleted</string>
    <string name="import_menu_album_tooltip">Files will be added to \"%s\" after importing</string>
    <string name="process_close">Close</string>
    <string name="process_abort">Abort</string>
    <string name="process_finished">Finished</string>
    <string name="process_initialize">Preparing…</string>
    <string name="process_aborted">Aborted</string>
    <string name="process_failures_occurred">\u26A0 Some elements could not get processed</string>
    <string name="view_photo_detail_title">Details</string>
    <string name="view_photo_detail_file_name_label">Filename:</string>
    <string name="view_photo_detail_import_at_label">Imported at:</string>
    <string name="view_photo_detail_file_type_label">File Type:</string>
    <string name="view_photo_detail_size_label">File size:</string>
    <string name="view_photo_detail_last_modified">Last modified:</string>
    <string name="view_photo_play_button_description">Play Video</string>
    <string name="menu_main_lock">Lock</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_ms_select_all">Select All</string>
    <string name="menu_ms_delete">Delete</string>
    <string name="menu_ms_export">Export</string>
    <string name="menu_ms_info">%1$d item(s) selected</string>
    <string name="menu_ms_add_to_album">Add to album</string>
    <string name="menu_ms_remove_from_album">Remove from album</string>
    <string name="delete_are_you_sure">Are you sure, you want to <b>delete</b> %1$d file(s)?</string>
    <string name="delete_are_you_sure_this">Are you sure, you want to <b>delete</b> this file?</string>
    <string name="delete_deleting">Deleting file(s)…</string>
    <string name="export_are_you_sure">Are you sure, you want to <b>export</b> %1$d file(s), back to your gallery?</string>
    <string name="export_and_delete_are_you_sure">Are you sure, you want to <b>export</b> %1$d file(s), back to your gallery and delete them?</string>
    <string name="export_are_you_sure_this">Are you sure, you want to <b>export</b> this file to your gallery?</string>
    <string name="export_and_delete_are_you_sure_this">Are you sure, you want to <b>export</b> this file to your gallery and delete it?</string>
    <string name="export_exporting">Exporting file(s)…</string>
    <string name="export_permission_rationale">Photok needs to access your storage, to export files.</string>
    <string name="export_finished">Exported</string>
    <string name="export_and_delete_finished">Exported and deleted</string>
    <string name="about_version">Version:</string>
    <string name="about_developed_by">Developed by:</string>
    <string name="about_website_label">leonlatsch.dev</string>
    <string name="about_website_url">https://leonlatsch.dev</string>
    <string name="about_third_party">Third Party Software</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_privacy_policy_url">https://leonlatsch.dev/photok_privacy_policy</string>
    <string name="about_menu_news">News</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_app">App</string>
    <string name="settings_app_design_title">Design</string>
    <string name="settings_app_design_system_default">System Default</string>
    <string name="settings_app_design_system_light">Light</string>
    <string name="settings_app_design_system_dark">Dark</string>
    <string name="settings_category_gallery">Gallery</string>
    <string name="settings_gallery_auto_fullscreen_title">Auto Fullscreen</string>
    <string name="settings_gallery_auto_fullscreen_summary">Enter fullscreen mode when opening a file</string>
    <string name="settings_gallery_start_page_title">Start page</string>
    <string name="settings_category_security">Security</string>
    <string name="settings_security_allow_screenshots_title">Allow Screenshots</string>
    <string name="settings_security_allow_screenshots_summary">Allow taking screenshot. Requires restart.</string>
    <string name="settings_security_change_password_title">Change Password</string>
    <string name="settings_security_change_password_summary">Change your password</string>
    <string name="settings_security_biometric_title">Biometric Unlock</string>
    <string name="settings_security_biometric_summary">Unlock Photok with biometric authentication.</string>
    <string name="settings_security_biometric_not_available">Biometric Unlock is not available</string>
    <string name="settings_security_timeout_title">Automatic Lock Timeout</string>
    <string name="settings_security_timeout_summary">Automatic lock after given time in background</string>
    <string name="settings_security_timeout_immediately">Immediately</string>
    <string name="settings_security_timeout_one_minute">1 Minute</string>
    <string name="settings_security_timeout_two_minute">2 Minutes</string>
    <string name="settings_security_timeout_five_minute">5 Minutes</string>
    <string name="settings_security_timeout_ten_minute">10 Minutes</string>
    <string name="settings_security_timeout_never">Never</string>
    <string name="settings_security_launch_code_title">Secret Launch Code</string>
    <string name="settings_security_launch_code_summary">Secret code to launch Photok from the phone dialer.</string>
    <string name="settings_security_launch_code_message">Enter *#*#[your code]#*#* in phone dialer to launch Photok.</string>
    <string name="settings_security_launch_code_prefix">*#*#</string>
    <string name="settings_security_launch_code_suffix">#*#*</string>
    <string name="settings_security_hide_app_title">Hide App</string>
    <string name="settings_security_hide_app_summary">Hide app icon from app drawer.</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_advanced_summary">Use carefully</string>
    <string name="settings_advanced_reset_title">Reset Safe</string>
    <string name="settings_advanced_reset_summary">Wipe data and reset password</string>
    <string name="settings_advanced_reset_confirmation">Do you REALLY want to reset your safe? All data will be lost!</string>
    <string name="settings_advanced_backup_title">Backup</string>
    <string name="settings_advanced_backup_summary">Create a backup of your safe</string>
    <string name="settings_advanced_delete_imported_title">Delete imported files</string>
    <string name="settings_advanced_delete_imported_summary">Delete files after importing them</string>
    <string name="settings_advanced_delete_exported_title">Delete exported files</string>
    <string name="settings_advanced_delete_exported_summary">Delete files after exporting them</string>
    <string name="settings_other_title">Other</string>
    <string name="settings_other_feedback_title">Feedback</string>
    <string name="settings_other_feedback_summary">Send me an email with feedback</string>
    <string name="settings_other_feedback_mail_subject">Feedback to Photok</string>
    <string name="settings_other_feedback_mail_body">Write a feedback about Photok :)</string>
    <string name="settings_other_feedback_mail_emailaddress">photok@leonlatsch.dev</string>
    <string name="settings_other_donate_title">Donate</string>
    <string name="settings_other_donate_summary">Support the development of Photok</string>
    <string name="settings_other_donate_url">https://ko-fi.com/leonlatsch</string>
    <string name="settings_other_sourcecode_title">Source Code</string>
    <string name="settings_other_sourcecode_summary">Contribute to Photok</string>
    <string name="settings_other_sourcecode_url">https://github.com/leonlatsch/Photok</string>
    <string name="settings_other_credits_title">Credits</string>
    <string name="settings_other_credits_summary">Contributors and credits</string>
    <string name="settings_other_about_title">About</string>
    <string name="settings_other_about_summary">Information about Photok</string>
    <string name="credits_contributors_title">Contributors</string>
    <string name="credits_contributors_hint">Visit Photok at GitHub to see all contributors</string>
    <string name="credits_icons_title">Icons</string>
    <string name="recovery_subtitle">Recovery Menu</string>
    <string name="recovery_menu_item_open_photok">Open Photok</string>
    <string name="recovery_subtitle_reset_hide_app">Reset Hide App Setting</string>
</resources>