<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="context"
            type="dev.leonlatsch.photok.ui.viewphoto.DetailsBottomSheetDialog" />

        <import type="dev.leonlatsch.photok.databinding.BindingConverters" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="80dp">

        <TextView
            style="@style/LightTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_photo_detail_title"
            android:textSize="18sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp">

            <!-- FILENAME -->
            <TextView
                style="@style/LightLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:singleLine="true"
                android:text="@string/view_photo_detail_file_name_label" />

            <TextView
                style="@style/LightTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:singleLine="true"
                android:text="@{context.photo.fileName, default=value}" />

            <!-- IMPORTED AT -->

            <TextView
                style="@style/LightLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:singleLine="true"
                android:text="@string/view_photo_detail_import_at_label" />

            <TextView
                style="@style/LightTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:singleLine="true"
                android:text="@{BindingConverters.INSTANCE.millisToFormattedDateConverter(context.photo.importedAt), default=value}" />

            <!-- TYPE -->
            <TextView
                style="@style/LightLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:singleLine="true"
                android:text="@string/view_photo_detail_file_type_label" />

            <TextView
                style="@style/LightTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@{context.photo.type.toString(), default=value}" />

            <!-- FILE SIZE -->
            <TextView
                style="@style/LightLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:singleLine="true"
                android:text="@string/view_photo_detail_size_label" />

            <TextView
                style="@style/LightTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:text="@{BindingConverters.INSTANCE.formatByteSizeConverter(context.photoSize), default=value}" />

        </GridLayout>

    </LinearLayout>
</layout>