<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2020 Leon Latsch
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="context"
            type="dev.leonlatsch.photok.ui.process.base.BaseProcessBottomSheetDialogFragment" />

        <variable
            name="viewModel"
            type="dev.leonlatsch.photok.ui.process.base.BaseProcessViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_light"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/ProcessingTestViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{context.labelText, default=Processing}" />

            <ImageView
                android:id="@+id/statusImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"
                android:src="@{context.statusDrawable}" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{context.processIndicatorsVisibility}">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.progress.progressPercent.toString(), default=50}" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_percent" />

        </LinearLayout>

        <ProgressBar
            style="@style/ProgressBarHorizontalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:max="@{viewModel.progress.maxPercent}"
            android:progress="@{viewModel.progress.progressPercent, default=50}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/processItemsProgressIndicatorLayout"
                android:text="@string/process_failures_occurred"
                android:textColor="@android:color/holo_orange_dark"
                android:visibility="@{context.failuresWarnMessageVisibility, default=invisible}" />

            <LinearLayout
                android:id="@+id/processItemsProgressIndicatorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="@{context.processIndicatorsVisibility}">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.progress.current.toString(), default=5}" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/common_slash" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.progress.max.toString(), default=10}" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp">

            <Button
                style="@style/buttonStyle"
                android:layout_width="@dimen/wide_button_width"
                android:layout_height="@dimen/wide_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:onClick="@{() -> viewModel.cancel()}"
                android:text="@string/process_abort"
                android:visibility="@{context.abortButtonVisibility, default=visible}" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="@dimen/wide_button_width"
                android:layout_height="@dimen/wide_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:onClick="@{() -> context.dismiss()}"
                android:text="@string/process_close"
                android:visibility="@{context.closeButtonVisibility, default=gone}" />
        </LinearLayout>

    </LinearLayout>
</layout>
