<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2020 Leon Latsch
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="context"
            type="dev.leonlatsch.photok.ui.settings.ChangePasswordDialog" />
        <variable
            name="viewModel"
            type="dev.leonlatsch.photok.ui.settings.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_light"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/BigTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Change your Password" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Old Password:" />

        <dev.leonlatsch.photok.ui.components.PasswordEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/big_gap"
            android:text="New Password:" />

        <dev.leonlatsch.photok.ui.components.PasswordEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:password_edit_text_hint="@string/setup_enter_password" /> <!-- TODO: replace text  -->

        <dev.leonlatsch.photok.ui.components.PasswordEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            app:password_edit_text_hint="@string/setup_confirm_password" /> <!-- TODO: replace text  -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/small_gap"
            android:text="@string/setup_password_match_warning"
            android:textColor="@color/darkRed"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button
            android:layout_width="@dimen/wide_button_width"
            android:layout_height="@dimen/wide_button_height"
            android:layout_marginTop="@dimen/medium_gap"
            android:text="Change Password" />
    </LinearLayout>
</layout>
